--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Welcome</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>The Greenbush Neighborhood Association represents the Greenbush neighborhood in Madison, WI.</p>
 </body>
 </html>
